production/namespaces/system/networkpolicies/egress/cert-manager.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-cert-manager
  namespace: system
spec:
  podSelector: 
    matchLabels:
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/name: cert-manager
  egress:
  # Apiserver
  - to:
    - ipBlock:
        cidr: 172.16.0.0/28
    ports:
    - protocol: TCP
      port: 443

  # GKE metadata server
  - to:
    - ipBlock:
        cidr: 127.0.0.1/32
    ports:
    - protocol: TCP
      port: 988

  # Internet for LetsEncrypt and GCP APIs
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
          - 10.0.0.0/8
    ports:
    - protocol: TCP
      port: 443
  policyTypes:
  - Egress
