production/namespaces/system/networkpolicies/egress/linkerd.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-linkerd
  namespace: system
spec:
  podSelector: 
    matchLabels:
      app: linkerd
  egress:
  # Apiserver
  - to:
    - ipBlock:
        cidr: 172.16.0.0/28
    ports:
    - protocol: TCP
      port: 443
  policyTypes:
  - Egress
